Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjUndefinedRetText.quorum
class Main
    action Main
        Yoda<Text, Text, undefined> yoda
        undefined y = yoda:useForce("green", "green")
        output "passed"
     end
end
