Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriTextObjRetTextFail.quorum
class Main
    action Main
        Yoda<Text, Text, Text> yoda
        boolean y = yoda("green", "green", true)
     end
end
